# spoteezer

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  justfile
_archive/: deezer_to_spotify.py  spoteezer.html  unsorted.py
backend/: .env.example  justfile  pyproject.toml
backend/src/spoteezer/: convert_link.py  flask_app.py  helper.py
backend/src/spoteezer/items/: abstract_item.py  deezer_item.py  spotify_item.py
backend/tests/: conftest.py  test_spoteezer_live.py
backend/tests/items/: test_abstract_item.py  test_deezer_item.py  test_spotify_item.py
frontend/: index.html  style.css
spoteezer/: justfile  pyproject.toml
spoteezer/src/spoteezer/: config.py  convert_link.py  flask_app.py  helper.py
spoteezer/src/spoteezer/items/: deezer_item.py
spoteezer/tests/: conftest.py  test_flask_app.py  test_items.py
src/: app.py  convert_link.py  d2s.py  flask_app.py  helper.py  spoteezer.html  spoteezer_style.css  webpage.html
src/app/: config.py  convert_link.py  flask_app.py  helper.py  items.py  rules.py
src/app/items/: deezer_item.py  item.py  spotify_item.py
src/website/: index.html  spoteezer.html  spoteezer_style.css  style.css
