[project]
name = "spoteezer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "requests>=2.32.5",
    "spotipy>=2.25.2",
    "deezer-python>=7.2.0",
    "structlog>=25.5.0",
    "ty>=0.0.8",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
spoteezer = "spoteezer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
